index.css
*{
    margin: 0;
    padding: 0;
    font-family: Assistant, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
    box-sizing: border-box;
}
header{
    display: flex;
    position: fixed;
    background-color: white;
    height: 80px;
    width: 100%;
    justify-content: space-around;
    align-items: center;
    border-bottom:2px solid #dcdde1;
}
.myntra_home{
    height: 40px;
    width: 55px;
}
.nav_bar{
    display: flex;
    justify-content: space-around;
    background-color: white;
    min-width: 700px;
}
.nav_bar a{
    text-decoration: none;
    font-size: 14px;
    letter-spacing: .3px;
    color: #282c3f;
    font-weight: 700;
    letter-spacing: .3px;
    padding: 30px 0;
}
.nav_bar a:hover{
    border-bottom:2px solid #f54e77;
}
#new{
    width: 20.16px;
    height: 13.6px;
    text-align: left;
    color: #ff3f6c;
    font-size: 10px;
}
.material-symbols-outlined {
  font-variation-settings:
  'FILL' 0,
  'wght' 400,
  'GRAD' 0,
  'opsz' 24
}
.search_icon{
    color: #282c3f;
}
.search_bar{
    
    background: #f5f5f6;
    height: 40px;
    min-width: 400px;
    display: flex;
    align-items: center;
    border-radius: 4px;
}
.search_input{
    height: 40px;
    color: #696e79;
    background: #f5f5f6;
    flex-grow: 1;
    border:0;
}
.action_bar{
    display: flex;
    min-width: 200px;
    justify-content: space-around;
}
.action_container{
    display: flex;
    flex-direction: column;
    align-items: center;
}
.action_text{
     font-size: 12px;
}

.banner_container{
    margin: 40px 0;
}
.banner_image{
    height: 750px;
    width: 100%;
}
.category_heading{
    text-transform: uppercase;
    color: #3e4152;
    letter-spacing: .15em;
    font-size: 1.8em;
    margin: 50px 0 10px 30px;
    max-height: 5em;
    font-weight: 700;
}
.category_items1{
    padding: 10px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-around;
}
.category_items2{
    padding: 10px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-around;
}
.category_items3{
    padding: 10px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-around;
}
.category_items4{
    padding: 10px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-around;
}
.category_items5{
    padding: 10px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-around;
}
.end_ban{
    width: 100%;
}
footer{
    width: 100%;
    margin: 10px 0;
    padding: 30px 0;
    background-color: #f7f7f8;
}
.footer_column1{
    color: #282c3f;
    font-family: Assistant, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
    font-size: 15px;
    font-weight: 450;
}
h4{
    padding: 20px 0;
}
.links1{
    color: #696b79;
    display: block;
    font-family: Assistant, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
    font-size: 13px;
    text-decoration: none;
    padding-bottom: 5px;
}
.links2{
    color: #696b79;
    display: block;
    font-family: Assistant, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
    font-size: 13px;
    text-decoration: none;
    padding-bottom: 5px;
}
.footer_container{
    padding: 0 100px;
    display: flex;
}
.footer_column2{
    padding: 0 100px;
    color: #282c3f;
    font-family: Assistant, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
    font-size: 15px;
    font-weight: 450;
}
.links3{
    color: #696b79;
    display: block;
    font-family: Assistant, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
    font-size: 13px;
    text-decoration: none;
    padding-bottom: 5px;
}
.footer_column3{
    padding: 0 10px;
    color: #282c3f;
    font-family: Assistant, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
    font-size: 15px;
    font-weight: 450;
}
.download{
    display: flex;
}
.links4{
    margin: 0 10px;
    border: #696b79 solid 2px;
    border-radius: 5px;
    width: 130px;
    height: 42px;
}
.socialmedia{
    padding:0 13px;
    font-size:40px; 
    color:#6e6e73;
    font-size: 30px;
}
.footer_column4{
    padding: 0 100px;
    color: #282c3f;
    font-family: Assistant, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
    font-size: 15px;
    font-weight: 450;
}
.original{
    width: 300px;
}

